fabric/testdata/out/ing_fabric-event-scheduler-gateway-put-api-registered-applications-id-all.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    metacontroller.k8s.io/last-applied-configuration: '{"apiVersion":"extensions/v1beta1","kind":"Ingress","metadata":{"annotations":{"zalando.org/aws-load-balancer-ssl-policy":"ELBSecurityPolicy-FS-2018-06","zalando.org/skipper-filter":"oauthTokeninfoAnyKV(\"realm\",
      \"/services\", \"realm\", \"/employees\") -\u003e unverifiedAuditLog(\"sub\")
      -\u003e oauthTokeninfoAllScope(\"uid\", \"restricted.to.admins\") -\u003e flowId(\"reuse\")
      -\u003e forwardToken(\"X-TokenInfo-Forward\", \"uid\", \"scope\", \"realm\")","zalando.org/skipper-predicate":"Weight(3)
      \u0026\u0026 Path(\"/api/registered-applications/:id\") \u0026\u0026 Method(\"PUT\")
      \u0026\u0026 Header(\"X-Forwarded-Proto\", \"https\")"},"labels":{"controller-uid":"eedb8509-1ee8-11e9-b78f-0a57a5a15272","deployment-id":"d-8dmn6j9jdg33ypaeqm2jv7v2d","pipeline-id":"l-26s8kqzdng1pty8usuum69sw4p"},"name":"fabric-event-scheduler-gateway-put-api-registered-applications-id-all","namespace":"default"},"spec":{"rules":[{"host":"fabric-event-streams.smart-product-platform-test.zalan.do","http":{"paths":[{"backend":{"serviceName":"fabric-event-scheduler","servicePort":"http"},"pa [...]
    zalando.org/aws-load-balancer-ssl-policy: ELBSecurityPolicy-FS-2018-06
    zalando.org/skipper-filter: oauthTokeninfoAnyKV("realm", "/services", "realm",
      "/employees") -> unverifiedAuditLog("sub") -> oauthTokeninfoAllScope("uid",
      "restricted.to.admins") -> flowId("reuse") -> forwardToken("X-TokenInfo-Forward",
      "uid", "scope", "realm")
    zalando.org/skipper-predicate: Weight(3) && Path("/api/registered-applications/:id")
      && Method("PUT") && Header("X-Forwarded-Proto", "https")
  creationTimestamp: "2019-06-17T13:45:47Z"
  generation: 2
  labels:
    controller-uid: eedb8509-1ee8-11e9-b78f-0a57a5a15272
    deployment-id: d-8dmn6j9jdg33ypaeqm2jv7v2d
    pipeline-id: l-26s8kqzdng1pty8usuum69sw4p
  name: fabric-event-scheduler-gateway-put-api-registered-applications-id-all
  namespace: default
  ownerReferences:
  - apiVersion: zalando.org/v1
    blockOwnerDeletion: true
    controller: true
    kind: FabricGateway
    name: fabric-event-scheduler-gateway
    uid: eedb8509-1ee8-11e9-b78f-0a57a5a15272
  resourceVersion: "1357488653"
  uid: 36456075-9106-11e9-a3f0-065b20c8b844
spec:
  rules:
  - host: fabric-event-streams.smart-product-platform-test.zalan.do
    http:
      paths:
      - backend:
          service:
            name: fabric-event-scheduler
            port:
              name: http
        pathType: ImplementationSpecific
status:
  loadBalancer:
    ingress:
    - hostname: kube-ing-lb-vejw9uwox1cj-898356825914b821.elb.eu-central-1.amazonaws.com
